namespace Enums
{
    public enum ManaCondition
    {
        None,
        ByTime,
        Instant
    }
}
